# lib/Mirakurun/api/config/channels/scan.js
@@ -93,12 +93,16 @@ const channelOrder = {
     NW37: 41,
     NW38: 42,
     NW39: 43,
-    NW40: 44
+    NW40: 44,
+    BS4K: 45,
+    CS4K: 46
 };
 const CHANNEL_NAME_FORMAT_GR = "{ch}";
 const CHANNEL_NAME_FORMAT_BS = "{ch}";
 const CHANNEL_NAME_FORMAT_BS_SUBCH = "BS{ch00}_{subch}";
 const CHANNEL_NAME_FORMAT_CS = "CS{ch}";
+const CHANNEL_NAME_FORMAT_BS4K = "BS4K{ch00}_{subch}";
+const CHANNEL_NAME_FORMAT_CS4K = "CS4K{ch}";
 let isCancellationRequested = false;
 const scanStatus = {
     isScanning: false,
@@ -202,6 +206,41 @@ function generateScanConfig(option) {
                 .map(ch => formatChannelName(channelFormat, ch)),
             scanMode: csOptions.scanMode,
             setDisabledOnAdd: csOptions.setDisabledOnAdd
+        };
+    }
+    if (option.type === "BS4K") {
+        const bs4kOptions = {
+            startCh: 1,
+            endCh: 23,
+            startSubCh: 0,
+            endSubCh: 3,
+            ...satelliteOptions
+        };
+        const channels = [];
+        const channelFormat = bs4kOptions.channelNameFormat || CHANNEL_NAME_FORMAT_BS4K;
+        for (const ch of range(bs4kOptions.startCh, bs4kOptions.endCh)) {
+            for (const subCh of range(bs4kOptions.startSubCh, bs4kOptions.endSubCh)) {
+                channels.push(formatChannelName(channelFormat, ch, subCh));
+            }
+        }
+        return {
+            channels,
+            scanMode: bs4kOptions.scanMode,
+            setDisabledOnAdd: bs4kOptions.setDisabledOnAdd
+        };
+    }
+    if (option.type === "CS4K") {
+        const cs4kOptions = {
+            startCh: 2,
+            endCh: 24,
+            ...satelliteOptions
+        };
+        const channelFormat = cs4kOptions.channelNameFormat || CHANNEL_NAME_FORMAT_CS4K;
+        return {
+            channels: range(cs4kOptions.startCh, cs4kOptions.endCh)
+                .map(ch => formatChannelName(channelFormat, ch)),
+            scanMode: cs4kOptions.scanMode,
+            setDisabledOnAdd: cs4kOptions.setDisabledOnAdd
         };
     }
     return undefined;
@@ -586,7 +625,8 @@ About BS Subchannel Style:
                 "NW1", "NW2", "NW3", "NW4", "NW5", "NW6", "NW7", "NW8", "NW9", "NW10",
                 "NW11", "NW12", "NW13", "NW14", "NW15", "NW16", "NW17", "NW18", "NW19", "NW20",
                 "NW21", "NW22", "NW23", "NW24", "NW25", "NW26", "NW27", "NW28", "NW29", "NW30",
-                "NW31", "NW32", "NW33", "NW34", "NW35", "NW36", "NW37", "NW38", "NW39", "NW40"],
+                "NW31", "NW32", "NW33", "NW34", "NW35", "NW36", "NW37", "NW38", "NW39", "NW40",
+                "BS4K", "CS4K"],
             default: "GR",
             description: "Specifies the channel type to scan."
         },
